# msdfgen-wasm

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp  msdfgenWasm.cpp  vcpkg.json
prebuilt/: msdfgen-wasm.js  msdfgen-wasm.wasm
